@@ -65,7 +65,11 @@
 			var menu = {};
 			var newslist = [];
 			if(typeof Ti != "undefined") {
+				var time = 0;
 				Ti.App.addEventListener("app:changeContent", function(e) {
+					if(time == e.time)
+						return;
+					time = e.time;
 					Ti.App.fireEvent("app:log", {
 						message: 'changeContent'
 					});
